kubernetes/manifests/main-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app
  labels: 
    app: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
      - name: main-app
        image: kubeje2/devopsapp
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - name: main-app-port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: main-app
  type: ClusterIP
