kubernetes/manifests/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: rabbitmq-port
          containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  ports:
  - port: 5672
    targetPort: rabbitmq-port
    protocol: TCP
  selector:
    app: rabbitmq
  type: ClusterIP
