kubernetes/manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: devops.cloudminn.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-app-svc
            port:
              number: 8080
